--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,8 @@
         Welcome to AutoLister AI.
         Our Chrome extension will generate titles and descriptions for Vinted listings with a single click.
         <br /><br />
-        Check back soon or visit our GitHub for updates:<br />
-        <a href="https://github.com/yourusername/quick-vint" target="_blank" rel="noopener noreferrer">
-            github.com/yourusername/quick-vint
-        </a>
+        Check back soon and this page will have more info<br />
+        <a href="https://chromewebstore.google.com/detail/mommklhpammnlojjobejddmidmdcalc" target="_blank">Find it on the Chrome Web Store</a>
     </p>
     <footer>
         &copy; 2025 AutoLister AI · All rights reserved
