Add tier system with rate limiting and abuse prevention
- Add tierConfig.ts with 4-tier system (Free Trial, Starter, Pro, Business)
- Update rateLimiter.ts with backward compatibility for unlimited_monthly users
- Add pricing page with conversion-focused messaging
- Add Terms of Service with abuse prevention clauses
- Update privacy policy with Fair Use section
- Prevent API abuse while maintaining existing user experience

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -2,7 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-sc    <h2>8. Fair Use Policy and Abuse Prevention</    <h2>10. Children's Privacy</h2>2>
+    <p><strong>We reserve the right to monitor, restrict, or terminate accounts that violate our fair use policy.</strong></p>
+    <ul>
+      <li><strong>Usage Monitoring:</strong> We actively monitor API usage patterns, request frequencies, and user behavior to detect abuse, fraud, or violations of our terms.</li>
+      <li><strong>Rate Limiting:</strong> We enforce strict usage limits based on your subscription tier (Free Trial: 2/day max, Starter: 15/day, Professional: 40/day, Business: 75/day + overage). Circumventing these limits is prohibited.</li>
+      <li><strong>Account Suspension:</strong> We may immediately suspend or terminate accounts that:
+        <ul>
+          <li>Attempt to bypass rate limits or abuse our API</li>
+          <li>Use automated tools, bots, or scripts to generate excessive requests</li>
+          <li>Share account credentials or violate our single-user license</li>
+          <li>Engage in fraudulent chargebacks or payment disputes</li>
+          <li>Use the service for illegal activities or spam generation</li>
+        </ul>
+      </li>
+      <li><strong>No Refunds for Abuse:</strong> Accounts terminated for abuse forfeit any remaining subscription time or credits without refund.</li>
+      <li><strong>Legal Action:</strong> We reserve the right to pursue legal action against users who cause financial damage through abuse or violation of our terms.</li>
+      <li><strong>Data Retention for Compliance:</strong> Usage data and logs may be retained for up to 2 years for abuse detection, legal compliance, and account security purposes.</li>
+    </ul>
+
+    <h2>9. Data Retention and Account Termination</h2>le=1" />
   <title>Privacy Policy – AutoLister AI</title>
   <style>
     body {
@@ -69,8 +88,8 @@
     <h3>1.2 Usage Data</h3>
     <p>We collect certain information about how you use the Product:</p>
     <ul>
-      <li><strong>API calls count:</strong> Number of times you request AI-generated titles/descriptions each month (to enforce free‐tier limits).</li>
-      <li><strong>Subscription status and tier:</strong> Whether you are on a free plan or paid plan (monthly/annual).</li>
+      <li><strong>API calls count:</strong> Number of times you request AI-generated titles/descriptions each month and time-based usage (to enforce subscription limits and prevent abuse).</li>
+      <li><strong>Subscription status and tier:</strong> Whether you are on a free trial, Starter, Professional, or Business plan. This determines your usage limits and available features.</li>
       <li><strong>Extension interactions:</strong> Actions such as clicking "Generate", opening the popup, and navigating the billing portal. This data helps us monitor feature usage and detect abuse.</li>
     </ul>
 
@@ -87,7 +106,7 @@
       <li><strong>Email Address:</strong> To authenticate you via Supabase magic link and tie your extension usage to your account.</li>
       <li><strong>Supabase Session Token:</strong> To keep you logged in, fetch your profile (subscription status, API calls used), and securely call our backend APIs from the extension popup and content scripts.</li>
       <li><strong>Stripe Customer ID:</strong> To create and manage subscription Checkout Sessions and redirect you to the Stripe Customer Portal.</li>
-      <li><strong>Usage Data:</strong> To enforce free‐tier limits (5 calls per month) and calculate billing if you upgrade to a paid plan. We also use it to improve Product features and detect abusive behavior.</li>
+      <li><strong>Usage Data:</strong> To enforce subscription limits (monthly, daily, hourly, and per-minute) and calculate billing if you upgrade to a paid plan. We also use it to improve Product features and detect abusive behavior.</li>
       <li><strong>Extension Interaction Data:</strong> To enhance user experience, debug errors, and optimize performance. We do not share this with third parties except as described below.</li>
     </ul>
 
@@ -161,12 +180,12 @@
     <h2>9. Children’s Privacy</h2>
     <p>The Product is not intended for children under the age of 13. We do not knowingly collect personal data from children. If you are under 13, do not use the extension. If we learn that we have inadvertently collected personal information from a child under 13, we will promptly delete that data.</p>
 
-    <h2>10. Contact Us</h2>
+    <h2>11. Contact Us</h2>
     <p>If you have any questions, concerns, or requests regarding this Privacy Policy or your personal data, please contact us at:</p>
     <p><strong>Email:</strong> <a href="mailto:privacy@autolister.ai">privacy@autolister.ai</a><br />
        <strong>Address:</strong> AutoLister AI, 1234 Extension Lane, Amsterdam, Netherlands</p>
 
-    <h2>11. Changes to This Privacy Policy</h2>
+    <h2>12. Changes to This Privacy Policy</h2>
     <p>We may update this Privacy Policy from time to time to reflect changes in our data practices or legal requirements. When we make changes, we will revise the “Last updated” date at the top. We encourage you to review this page periodically. Your continued use of the Product after any changes indicates your acceptance of the updated policy.</p>
 
     <footer>&copy; 2025 AutoLister AI · All rights reserved</footer>
