--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,14 @@
         Welcome to AutoLister AI.
         Our Chrome extension will generate titles and descriptions for Vinted listings with a single click.
         <br /><br />
-        Check back soon and this page will have more info<br />
         <a href="https://chromewebstore.google.com/detail/mommklhpammnlojjobejddmidmdcalc" target="_blank">Find it on the Chrome Web Store</a>
+        <br />
+        <a href="/pricing.html">View Pricing & Usage Limits</a>
     </p>
     <footer>
         &copy; 2025 AutoLister AI · All rights reserved
+        <br />
+        <a href="/privacy.html">Privacy Policy</a> · <a href="/terms.html">Terms of Service</a>
     </footer>
 </body>
 
