fix: remove fake features and add smart Vinted redirect
- Fixed homepage Pro plan: removed 'Analytics dashboard' and 'Advanced AI features' we don't have
- Updated all Chrome Web Store links to correct URL: autolister-ai/mommklhpammnlojjobejddmidmdcalcl
- Added smart Vinted country detection and redirect in success page
- Created utils/vintedRedirect.ts with comprehensive country-to-domain mapping
- Success page now redirects users to their local Vinted create listing page
- Added localized button text for major European languages
- Improved user journey: subscription → direct to Vinted listing creation

--- a/public/index.html
+++ b/public/index.html
@@ -482,7 +482,7 @@
                     <a href="/pricing.html">Pricing</a>
                     <a href="/terms.html">Terms</a>
                     <a href="/privacy.html">Privacy</a>
-                    <a href="https://chromewebstore.google.com/detail/mommklhpammnlojjobejddmidmdcalc" target="_blank" class="btn-nav">Get Extension</a>
+                    <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank" class="btn-nav">Get Extension</a>
                 </div>
             </nav>
         </div>
@@ -497,7 +497,7 @@
                 Professional, conversion-focused content that sells - powered by advanced AI.
             </p>
             <div class="hero-cta">
-                <a href="https://chromewebstore.google.com/detail/mommklhpammnlojjobejddmidmdcalc" target="_blank" class="btn btn-primary">
+                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank" class="btn btn-primary">
                     Get Started Free
                 </a>
                 <a href="/pricing.html" class="btn btn-secondary">
@@ -629,9 +629,9 @@
                     <div class="plan-period">per month</div>
                     <ul class="plan-features">
                         <li>40 listings per day</li>
-                        <li>Advanced AI features</li>
+                        <li>Higher generation limits</li>
                         <li>Priority support</li>
-                        <li>Analytics dashboard</li>
+                        <li>Future features first</li>
                     </ul>
                 </div>
             </div>
@@ -647,7 +647,7 @@
             <h2>Ready to Transform Your Vinted Sales?</h2>
             <p>Join thousands of successful sellers who use AutoLister AI to create professional listings that sell faster.</p>
             <div class="hero-cta">
-                <a href="https://chromewebstore.google.com/detail/mommklhpammnlojjobejddmidmdcalc" target="_blank" class="btn btn-primary">
+                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank" class="btn btn-primary">
                     Start Free Today
                 </a>
                 <a href="/pricing.html" class="btn btn-secondary">
@@ -665,7 +665,7 @@
                 <a href="/privacy.html">Privacy Policy</a>
                 <a href="/terms.html">Terms of Service</a>
                 <a href="mailto:support@autolister.ai">Support</a>
-                <a href="https://chromewebstore.google.com/detail/mommklhpammnlojjobejddmidmdcalc" target="_blank">Chrome Extension</a>
+                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank">Chrome Extension</a>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 AutoLister AI. All rights reserved.</p>
