--- a/public/index.html
+++ b/public/index.html
@@ -65,17 +65,21 @@
 
         .btn-nav {
             background: #4f46e5;
-            color: white;
-            padding: 0.5rem 1.5rem;
-            border-radius: 8px;
+            color: white !important;
+            padding: 0.6rem 1.8rem;
+            border-radius: 10px;
             text-decoration: none;
-            font-weight: 600;
+            font-weight: 700;
             transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(79, 70, 229, 0.3);
+            border: 2px solid transparent;
         }
 
         .btn-nav:hover {
             background: #3730a3;
-            transform: translateY(-1px);
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(79, 70, 229, 0.4);
+            color: white !important;
         }
 
         /* Hero Section */
