Optimize: Combine admin endpoints to stay under 12 function limit
- Merged view-logs.ts and flag-activity.ts into single logs.ts endpoint
- Routes based on action query parameter (?action=view-logs or ?action=flag-activity)
- Updated HTML dashboard to use combined endpoint
- Now exactly 12 functions for Vercel Hobby plan compliance

--- a/public/api-logs.html
+++ b/public/api-logs.html
@@ -353,7 +353,7 @@
 
             try {
                 // Test the token by making a request to the logs API
-                const response = await fetch('/api/admin/view-logs?limit=1', {
+                const response = await fetch('/api/admin/logs?action=view-logs&limit=1', {
                     headers: {
                         'Authorization': `Bearer ${token}`
                     }
@@ -410,7 +410,7 @@
                     params.append('end_date', endDate);
                 }
 
-                const response = await fetch(`/api/admin/view-logs?${params}`, {
+                const response = await fetch(`/api/admin/logs?action=view-logs&${params}`, {
                     headers: {
                         'Authorization': `Bearer ${adminToken}`
                     }
@@ -529,7 +529,7 @@
 
         async function flagLog(logId, reason) {
             try {
-                const response = await fetch('/api/admin/flag-activity', {
+                const response = await fetch('/api/admin/logs?action=flag-activity', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -554,7 +554,7 @@
 
         async function unflagLog(logId, reason) {
             try {
-                const response = await fetch('/api/admin/flag-activity', {
+                const response = await fetch('/api/admin/logs?action=flag-activity', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
