Remove overage functionality completely
- Remove overage from tier configurations and interfaces
- Remove overage logic from rate limiter
- Remove overage billing tracking
- Update pricing page to remove overage mentions
- Update terms and privacy pages
- Clean up overage CSS and references

Simplifies billing and removes false advertising of unimplemented feature

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -136,16 +136,6 @@
             padding-left: 1rem;
         }
 
-        .overage-note {
-            background: #fef3c7;
-            border: 1px solid #f59e0b;
-            border-radius: 6px;
-            padding: 0.75rem;
-            margin-top: 1rem;
-            font-size: 0.875rem;
-            color: #92400e;
-        }
-
         .cta-button {
             width: 100%;
             padding: 1rem 2rem;
@@ -427,15 +417,11 @@
                 </ul>
             </div>
 
-            <div class="overage-note">
-                <strong>Overage Available:</strong> €0.05 per listing beyond daily limit (max 25/day)
-            </div>
-
             <ul class="features-list">
                 <li>Everything in Pro</li>
                 <li>Highest daily limits</li>
                 <li>Dedicated support</li>
-                <li>Overage requests available</li>
+                <li>Priority processing</li>
             </ul>
 
             <button class="cta-button" data-plan="business" id="btn-business">
