--- a/public/privacy.html
+++ b/public/privacy.html
@@ -6,7 +6,7 @@
     <p><strong>We reserve the right to monitor, restrict, or terminate accounts that violate our fair use policy.</strong></p>
     <ul>
       <li><strong>Usage Monitoring:</strong> We actively monitor API usage patterns, request frequencies, and user behavior to detect abuse, fraud, or violations of our terms.</li>
-      <li><strong>Rate Limiting:</strong> We enforce strict usage limits based on your subscription tier (Free Trial: 2/day max, Starter: 15/day, Professional: 40/day, Business: 75/day + overage). Circumventing these limits is prohibited.</li>
+      <li><strong>Rate Limiting:</strong> We enforce strict usage limits based on your subscription tier (Free Trial: 2/day max, Starter: 15/day, Professional: 40/day, Business: 75/day). Circumventing these limits is prohibited.</li>
       <li><strong>Account Suspension:</strong> We may immediately suspend or terminate accounts that:
         <ul>
           <li>Attempt to bypass rate limits or abuse our API</li>
