--- a/public/terms.html
+++ b/public/terms.html
@@ -88,7 +88,7 @@
                 <li><strong>Free Trial:</strong> 2 listings per day, 10 listings total</li>
                 <li><strong>Starter:</strong> $3.99/month - 15 listings per day, 300 per month</li>
                 <li><strong>Pro:</strong> $9.99/month - 40 listings per day, 800 per month</li>
-                <li><strong>Business:</strong> $19.99/month - 75 listings per day, 1,500 per month + overage options</li>
+                <li><strong>Business:</strong> $19.99/month - 75 listings per day, 1,500 per month</li>
             </ul>
         </div>
         <p><strong>We reserve the right to modify pricing and limits with 30 days notice.</strong> Existing subscribers will be grandfathered for their current billing period.</p>
