Fix empty string handling in image count fallback logic
Issue: image_urls column contained empty string, not null, preventing fallback to full_request_body
Fix: Added explicit check for non-empty strings before attempting to parse image_urls
Result: Now properly falls back to parsing full_request_body when image_urls is empty

This fixes the 0 image count display for historical log entries with empty image_urls.

--- a/public/admin.html
+++ b/public/admin.html
@@ -915,8 +915,8 @@
 
         // Helper function to get image count with fallback to full_request_body
         function getImageCount(log) {
-            // First try the image_urls column
-            if (log.image_urls) {
+            // First try the image_urls column (check for non-empty string)
+            if (log.image_urls && log.image_urls.trim() !== '') {
                 try {
                     return JSON.parse(log.image_urls).length;
                 } catch (e) {
@@ -943,8 +943,8 @@
 
         // Helper function to get image URLs with fallback
         function getImageUrls(log) {
-            // First try the image_urls column
-            if (log.image_urls) {
+            // First try the image_urls column (check for non-empty string)
+            if (log.image_urls && log.image_urls.trim() !== '') {
                 try {
                     return JSON.parse(log.image_urls);
                 } catch (e) {
