remove flagging for frequency

--- a/public/admin.html
+++ b/public/admin.html
@@ -775,34 +775,15 @@
                 </div>
             </div>
 
-            <!-- Row 2: User Tables -->
+            <!-- Row 2: Usage Tables -->
             <div class="tables-row">
                 <div class="stat-card">
-                    <h3>🔥 Top Users (This Month)</h3>
-                    <table class="data-table" id="topUsersTable">
-                        <thead>
-                            <tr>
-                                <th>Email</th>
-                                <th style="width: 80px;">Calls</th>
-                                <th style="width: 120px;">Tier</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+                    <h3>Today's Daily Usage</h3>
+                    <div id="todaysUsageContent"></div>
                 </div>
-
                 <div class="stat-card">
-                    <h3>📈 Recent Signups</h3>
-                    <table class="data-table" id="recentSignupsTable">
-                        <thead>
-                            <tr>
-                                <th>Email</th>
-                                <th style="width: 80px;">Date</th>
-                                <th style="width: 80px;">Status</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+                    <h3>🏆 Top Users (All Time)</h3>
+                    <div id="topUsersContent"></div>
                 </div>
             </div>
 
