--- a/public/admin.html
+++ b/public/admin.html
@@ -1720,29 +1720,34 @@
                 `;
             });
 
-            // Rate limits (show all users)
+            // Rate limits (show all active limits for all window types)
             const rateLimitsDiv = document.getElementById('rateLimitsContent');
             if (!data.todaysUsage || data.todaysUsage.length === 0) {
                 rateLimitsDiv.innerHTML = '<div class="success-indicator">✅ No users found</div>';
             } else {
-                let html = '<table class="data-table"><thead><tr><th>User</th><th>Tier</th><th>Usage</th><th>Status</th><th>Expires</th></tr></thead><tbody>';
-                data.todaysUsage.forEach(limit => {
-                    const expiry = limit.expires_at ? new Date(limit.expires_at).toLocaleString() : '-';
-                    const userEmail = limit.email || 'Unknown';
-                    const userIdShort = limit.user_id ? (limit.user_id.substring(0, 8) + '...') : '';
-                    const statusHtml = limit.is_blocked 
-                        ? `<span style="color: #dc2626; font-weight: 600;">Blocked</span>`
-                        : `<span style="color: #059669;">OK</span>`;
-                    html += `<tr>
-                        <td>
-                            <div style="font-weight: 500;">${userEmail}</div>
-                            <div style="font-size: 0.75rem; color: #6b7280; font-family: monospace;">${userIdShort}</div>
-                        </td>
-                        <td><span style="background: #f3f4f6; padding: 2px 6px; border-radius: 4px; font-size: 0.875rem; text-transform: capitalize;">${limit.tier}</span></td>
-                        <td><strong>${limit.count}</strong> / ${limit.daily_limit}</td>
-                        <td>${statusHtml}</td>
-                        <td>${expiry}</td>
-                    </tr>`;
+                // Only show users with at least one active limit
+                const filteredUsers = data.todaysUsage.filter(user => user.limits && user.limits.length > 0);
+                if (filteredUsers.length === 0) {
+                    rateLimitsDiv.innerHTML = '<div class="success-indicator">✅ No users with active limits</div>';
+                    return;
+                }
+                let html = '<table class="data-table"><thead><tr><th>User</th><th>Tier</th><th>Limit Type</th><th>Usage</th><th>Expires</th></tr></thead><tbody>';
+                filteredUsers.forEach(user => {
+                    const userEmail = user.email || 'Unknown';
+                    const userIdShort = user.user_id ? (user.user_id.substring(0, 8) + '...') : '';
+                    user.limits.forEach(limit => {
+                        const expiry = limit.expires_at ? new Date(limit.expires_at).toLocaleString() : '-';
+                        html += `<tr>
+                            <td>
+                                <div style=\"font-weight: 500;\">${userEmail}</div>
+                                <div style=\"font-size: 0.75rem; color: #6b7280; font-family: monospace;\">${userIdShort}</div>
+                            </td>
+                            <td><span style=\"background: #f3f4f6; padding: 2px 6px; border-radius: 4px; font-size: 0.875rem; text-transform: capitalize;\">${user.tier}</span></td>
+                            <td><strong>${limit.window_type}</strong></td>
+                            <td><strong>${limit.count}</strong></td>
+                            <td>${expiry}</td>
+                        </tr>`;
+                    });
                 });
                 html += '</tbody></table>';
                 rateLimitsDiv.innerHTML = html;
