--- a/public/pricing.html
+++ b/public/pricing.html
@@ -357,7 +357,7 @@
                     <li>15 listings per day</li>
                     <li>300 listings per month</li>
                     <li>10 per minute (quick retries)</li>
-                    <li>40 per hour (batch sessions)</li>
+                    <!-- hourly limit removed -->
                 </ul>
             </div>
 
@@ -385,7 +385,7 @@
                     <li>40 listings per day</li>
                     <li>800 listings per month</li>
                     <li>20 per minute (quick retries)</li>
-                    <li>80 per hour (batch sessions)</li>
+                    <!-- hourly limit removed -->
                 </ul>
             </div>
 
@@ -413,7 +413,7 @@
                     <li>75 listings per day</li>
                     <li>1,500 listings per month</li>
                     <li>30 per minute (quick retries)</li>
-                    <li>120 per hour (batch sessions)</li>
+                    <!-- hourly limit removed -->
                 </ul>
             </div>
 
