--- a/public/privacy.html
+++ b/public/privacy.html
@@ -106,7 +106,7 @@
       <li><strong>Email Address:</strong> To authenticate you via Supabase magic link and tie your extension usage to your account.</li>
       <li><strong>Supabase Session Token:</strong> To keep you logged in, fetch your profile (subscription status, API calls used), and securely call our backend APIs from the extension popup and content scripts.</li>
       <li><strong>Stripe Customer ID:</strong> To create and manage subscription Checkout Sessions and redirect you to the Stripe Customer Portal.</li>
-      <li><strong>Usage Data:</strong> To enforce subscription limits (monthly, daily, hourly, and per-minute) and calculate billing if you upgrade to a paid plan. We also use it to improve Product features and detect abusive behavior.</li>
+  <li><strong>Usage Data:</strong> To enforce subscription limits (monthly, daily, and per-minute) and calculate billing if you upgrade to a paid plan. We also use it to improve Product features and detect abusive behavior.</li>
       <li><strong>Extension Interaction Data:</strong> To enhance user experience, debug errors, and optimize performance. We do not share this with third parties except as described below.</li>
     </ul>
 
